src/objects/CPQ_PMDSOR_Staging_Data__c.object
<CustomObject>
    <fields>
        <fullName>BusinessGroup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Reporting_BG__c</fullName>
        <description>This field captures the Business Unit from the finance reporting structure</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field captures the Business Unit from the finance reporting structure.</inlineHelpText>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Reporting_BL_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Finance Reporting BL Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Reporting_BU__c</fullName>
        <description>This field captures the Business Line from the finance reporting structure</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field captures the Business Line from the finance reporting structure.</inlineHelpText>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Reporting_PP_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Finance Reporting PP Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Data_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Data Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PLI_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PLI Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Partial_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if data processing to product is partially successful.</description>
        <inlineHelpText>Indicates if data processing to product is partially successful. Check the status message for more details.</inlineHelpText>
        <label>Is Partial Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NSNCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>NSNCode</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSN_Finance_Reporting_Structure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSN Finance Reporting Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSN_Published_to_QtC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSN_Published_to_QtC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NSN_Reference_Price_Currency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSN Reference Price Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSN_Reference_Price__c</fullName>
        <label>NSN Reference Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSN_Secondary_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSN Secondary Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSN_Tertiary_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSN Tertiary Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMDSOR_PCI_UpdateDateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMDSOR PCI UpdateDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMDSOR_SI_UpdateDateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMDSOR SI Update DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ParentNSNCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ParentNSNCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processing Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>PMDSOR Staging Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NSNCode__c</columns>
        <columns>ParentNSNCode__c</columns>
        <columns>NSN_Published_to_QtC__c</columns>
        <columns>NSN_Secondary_Category__c</columns>
        <columns>NSN_Tertiary_Category__c</columns>
        <columns>NSN_Finance_Reporting_Structure__c</columns>
        <columns>Is_Data_Processed__c</columns>
        <columns>Is_Partial_Success__c</columns>
        <columns>Is_PLI_Processed__c</columns>
        <columns>Processing_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PMD-{0000000}</displayFormat>
        <label>PMDSOR Staging Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMDSOR Staging Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>